# owu

./: Cargo.toml  README.md
.github/: FUNDING.yml
.github/actions/pages/: action.yml
.github/workflows/: on_push.yml
crates/owu_core/: Cargo.toml
crates/owu_core/src/: lib.rs
pages/: .gitignore  index.html
src/: lib.rs
wiki/: book.toml
wiki/src/: .gitignore  index.md  mod_development.md  what_is_owu.md  world_representation.md
wiki/src/factions/: blob.md  cyber.md  dragon.md  human.md  index.md  wyvern.md
wiki/src/lore/: index.md  planet.md  planet_helia.md
wiki/src/tech/: index.md  world_representation.md
wiki/src/tribes/: cyber.md  dragon.md  human.md  index.md
wiki/src/world_events/: index.md  planetary_collision.excalidraw  planetary_collision.md
