[package]
name = "owu_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
categories.workspace = true

# NOTE: we define the minimum set of bevy features in this crate
# full list of them here: https://github.com/bevyengine/bevy/blob/main/docs/cargo_features.md

[features]
default = ["bevy_core"]
linux = [
  "bevy/wayland",
  "bevy/x11"
]
windows = []
bevy_core = [
  # bevy defaults, commented out what we don't necessarily need in all cases
  # "bevy/android-game-activity",
  # "bevy/android_shared_stdcxx",
  "bevy/animation",
  "bevy/async_executor",
  "bevy/bevy_animation",
  "bevy/bevy_asset",
  "bevy/bevy_audio",
  "bevy/bevy_color",
  "bevy/bevy_core_pipeline",
  "bevy/bevy_gilrs",
  "bevy/bevy_gizmos",
  "bevy/bevy_gltf",
  "bevy/bevy_input_focus",
  "bevy/bevy_log",
  "bevy/bevy_mesh_picking_backend",
  "bevy/bevy_pbr",
  "bevy/bevy_picking",
  "bevy/bevy_render",
  "bevy/bevy_scene",
  "bevy/bevy_sprite",
  "bevy/bevy_sprite_picking_backend",
  "bevy/bevy_state",
  "bevy/bevy_text",
  "bevy/bevy_ui",
  "bevy/bevy_ui_picking_backend",
  "bevy/bevy_window",
  "bevy/bevy_winit",
  "bevy/custom_cursor",
  # "bevy/default_font",
  "bevy/hdr",
  "bevy/ktx2",
  "bevy/multi_threaded",
  "bevy/png",
  "bevy/smaa_luts",
  "bevy/std",
  # "bevy/sysinfo_plugin",
  "bevy/tonemapping_luts",
  "bevy/vorbis",
  # "bevy/webgl2",
  # "bevy/x11",
  "bevy/zstd",

  # some more optionals
  # "bevy/asset_processor",
  "bevy/serialize",
  "bevy/webp",
]

# TODO? figure out if mobile is doable, maybe with some build server...
# mobile = []
# TODO? maybe even web, like mobile...
# web = []

[dependencies]
bevy = { workspace = true }
